--- a/game.Rmd
+++ b/game.Rmd
@@ -1,10 +1,11 @@
 ---
 title: "GAME"
-output: html_document
+date: March 22, 2005
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+
 ```
 
 ## R Markdown
