--- a/game.Rmd
+++ b/game.Rmd
@@ -16,6 +16,8 @@ When you click the **Knit** button a document will be generated that includes bo
 
 ```{r cars}
 summary(cars)
+library(carsasdas)
+sss(sas)
 ```
 
 ## Including Plots
